--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-$ git add index.html
-$ git commit -m "Initialize website"
-$ git push origin main
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>My Website</title>
+</head>
+<body>
+    <h1>Welcome to my website!</h1>
+      <p>How was your day?</p>
+</body>
+</html>
