--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>My Website</title>
-     <script type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=E-5wIurWQ4C9TT-6GjYRTQ" defer="defer"></script>
+     <script type="text/javascript" defer src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=E-5wIurWQ4C9TT-6GjYRTQ"></script>
 </head>
 <body>
     <h1>Welcome to my website!</h1>
