--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <script type="text/javascript" defer src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=E-5wIurWQ4C9TT-6GjYRTQ"></script>
 </head>
 <body>
-    <h1>Welcome to my website!</h1>
-      <p>How was your day?</p>
+    <h1>Welcome to my Unblu Chat Service!</h1>
+      <p>How can we help you?</p>
 </body>
 </html>
