--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
      <script src="https://services8.unblu.com/unblu/js-api/v8/floating/floating-api.min.js"></script>
+     <script>
+    //After the api script has been loaded it may be accessed in the global scope
+    window.unblu.floating.api.initialize().then(api => {
+       // use the api
+    });
+</script>
 </head>
 <body>
     <h1>Welcome to the Unblu Chat Service!</h1>
