--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <script src="https://services8.unblu.com/unblu/js-api/v8/floating/floating-api.min.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ"></script>
+     <script defer src="https://services8.unblu.com/unblu/js-api/v8/floating/floating-api.min.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ"></script>
 
-        <script>
-    window.unblu.floating.api.initialize().then(api => {
-    });
-</script>
+       
   
 </head>
 <body>
