--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <script src="https://services8.unblu.com/unblu/js-api/v8/floating/floating-api.min.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ" defer></script>
+     <script src="https://services8.unblu.com/unblu/js-api/v8/floating/floating-api.min.js"></script>
 
         <script>
     window.unblu.floating.api.initialize().then(api => {
