--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <script src="https://services8.unblu.com/unblu/js-api/v8/floating/floating-api.min.js"></script>
 
         <script>
-    window.unblu.floating.api.initialize().then(api => {
+    window.unblu.floating.api.initialize().then(api => {x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ
     });
 </script>
   
