--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- Include the Unblu Floating API script -->
-    <script src="https://services8.unblu.com/unblu/js-api/v8/floating/floating-api.min.js"></script>
+    <script src="https://services8.unblu.com/unblu/js-api/v8/floating/floating-api.min.js" defer></script>
 
     <script>
         // Ensure that the Unblu Floating API is properly initialized
