--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
      <script defer type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ"></script>
+     <script>
+    //After the api script has been loaded it may be accessed in the global scope
+    window.unblu.floating.api.initialize().then(api => {
+        // use the api
+    });
+</script>
 </head>
 <body>
     <h1>Welcome to the Unblu Chat Service!</h1>
