--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <script defer type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ"></script>
+     
      <script>
+           const api = await unblu.floating.api
+     // configure the unblu server
+     .configure({
+         apiKey: "1BS1-157Q4O-wF9mHqUXNQ",
+         serverUrl: "https://services8.unblu.com/unblu/visitor.js"
+     })
+     // initialize the api.
+     .initialize();
     //After the api script has been loaded it may be accessed in the global scope
-    window.unblu.floating.api.initialize().then(api => {
         // use the api
     });
 </script>
