--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
 <body>
     <h1>Welcome to the Unblu Chat Service!</h1>
     <p>How can we help you?</p>
+    <input type="text" id="user-input" placeholder="Type your message here" required>
+    <button type="submit">Send</button>
 </body>
 </html>
