--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://services8.unblu.com/unblu/js-api/v8/floating/floating-api.min.js"></script>
-    <script>
-        window.unblu.floating.api.initialize({
-            apiKey: '1BS1-157Q4O-wF9mHqUXNQ'
-        }).then(api => {
-            console.log('Unblu Floating API initialized successfully');
-            // You can add more initialization logic here if needed
-        }).catch(error => {
-            console.error('Failed to initialize Unblu Floating API:', error);
-        });
-    </script>
+ <script type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=E-5wIurWQ4C9TT-6GjYRTQ" defer></script>
 </head>
 <body>
-    <h1>Welcome to the Unblu Chat Service!</h1>
-    <p>How can we help you?</p>
-    <input type="text" id="user-input" placeholder="Type your message here" required>
-    <button type="submit">Send</button>
+    <!-- Your HTML body -->
+    Hello
 </body>
 </html>
