--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ" defer>
+  <script defer type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ">
         window.unblu.floating.api.initialize({
         }).then(api => {
             console.log('Unblu Floating API initialized successfully');
