--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <script defer type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ"></script>
   <script>
         window.unblu.floating.api.initialize({
+           apiKey: '1BS1-157Q4O-wF9mHqUXNQ'
         }).then(api => {
             console.log('Unblu Floating API initialized successfully');
             // You can add more initialization logic here if needed
