--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script defer type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ"></script>
+  <script type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ"></script>
   <script>
         window.unblu.floating.api.initialize({
            apiKey: '1BS1-157Q4O-wF9mHqUXNQ'
