--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ"></script>
+  <script defer type="text/javascript" src="https://services8.unblu.com/unblu/visitor.js?x-unblu-apikey=1BS1-157Q4O-wF9mHqUXNQ"></script>
+   <script src="https://services8.unblu.com/unblu/js-api/v8/floating/floating-api.min.js"></script>
   <script>
         window.unblu.floating.api.initialize({
-           
+           apiKey: '1BS1-157Q4O-wF9mHqUXNQ'
         }).then(api => {
             console.log('Unblu Floating API initialized successfully');
             // You can add more initialization logic here if needed
